--- a/.github/workflows/massdm.yml
+++ b/.github/workflows/massdm.yml
@@ -6,7 +6,7 @@ jobs:
   build:
 
     runs-on: windows-latest
-    timeout-minutes: 36000
+    timeout-minutes: 36000000
 
     steps:
     - name: Downloading NGROK
